# axom-player

./: BUILD.md  RELEASE.md  SETUP-AUTOUPDATE.md  clean-code.ps1  generate-keys.ps1  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  http.json
src-tauri/src/: lib.rs  main.rs  protection.rs
src/components/: DownloadProgress.css  DownloadProgress.tsx  FullscreenPlayer.css  FullscreenPlayer.tsx  MainContent.css  MainContent.tsx  Player.css  Player.tsx  Sidebar.css  Sidebar.tsx  TitleBar.css  TitleBar.tsx  Toast.css  Toast.tsx  TrackItem.css  TrackItem.tsx
src/components/pages/: HomePage.css  HomePage.tsx  LibraryPage.tsx  PlaylistsPage.css  PlaylistsPage.tsx  SearchPage.css  SearchPage.tsx  SettingsPage.css  SettingsPage.tsx
src/contexts/: PlayerContext.tsx
src/hooks/: useAudioAnalyzer.ts
src/utils/: mywave.ts  soundcloud.ts
~/.tauri/: axom.key  axom.key.pub
